Replace getFirst with get in customer service test